--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="menuDesplegable" id="menuDesplegable"> <!-- nav -->
-      <span class="cerrar-menuDesplegable" id="cerrarDesplegable"><img src="imagenes/cerrar.png" alt=""></span>
+      <span class="cerrar-menuDesplegable" id="cerrarDesplegable"><img src="Imagenes/cerrar.png" alt=""></span>
 
       <ul class="menu-list"> <!-- nav-list -->
         <li><a href="#buttons"><img class="logosMenus" src="Imagenes/categoria.png" alt=""></a></li>
