--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <li><a href="#buttons"><img class="logosMenus" src="Imagenes/categoria.png" alt=""></a></li>
         <img id="openModalBtn" class="logosMenus" src="Imagenes/crear.png" alt="">
         <li><a href=""><img class="logosMenus" src="Imagenes/nosotros.png" alt=""></a></li>
-        <li><a href="footer"><img class="logosMenus" src="Imagenes/llamada.png" alt=""></a></li>
+        <li><a href="#icon-footer"> <img class="logosMenus" src="Imagenes/llamada.png" alt=""></a></li>
+        
       </ul>
       <div class="copy">
         <span>©Soff</span>
@@ -193,7 +194,7 @@
    
     <p>-------- PAGINA ACCESORIOS ---------</p>
 
-    <div class="icon-footer">
+    <div class="icon-footer" id="icon-footer">
       <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%2F%3Fphone%3D3188086084%26text%26type%3Dphone_number%26app_absent%3D0&e=AT2dFp2kKPDuDd17U3GjZgufwPV2ftRK3IT3KU-k7VccJS5wnJOqqwuYGcXcRK4Qen3qPP1M1TZvyCEruQUndcCHBP-euBY21lCFudHKE42oY_WavNhRv8KkXPtG9Hz3wpOsVLw3IOnQPuLTf_7bCH-bYZt_">
         <img class="iconFooter"src="Imagenes/telefono.png" alt="">
       </a>
